# mov-cli-files

./: README.md  pyproject.toml
.github/workflows/: codeberg.yaml
mov_cli_boilerplate/: __init__.py
mov_cli_boilerplate/boilerplate/: scraper.py
mov_cli_files/: __init__.py  paths.py  scraper.py
mov_cli_files/files/: scraper.py
